--- a/db/pages2.yml
+++ b/db/pages2.yml
@@ -97,7 +97,7 @@
       Stages take place in one day and have a duration of 7 hours, during which some teachers explain the main materials and methods of study. They also provided practical meeting with former graduates of the Academy already entered the world of work. 
       Participation in Stage is free (you can book) does not involve any commitment to inclusion, and one purpose only policy, and aptitude; also constitutes an element of further evaluation for the possible allocation of scholarships. At the end of the day, upon request, will receive a certificate of participation.
       
-      "FILL THE FORM TO ACCESS TO STAGES":/formstages
+      "FILL THE FORM TO ACCESS TO STAGES":/pages/form
       
       h4. Start Date next stage:	
       * VISUAL DESIGN:    24/01/2011
@@ -108,7 +108,7 @@
       Gli Stage si svolgono in una giornata e hanno una durata complessiva di 7 ore, durante le quali alcuni insegnanti illustrano le principali materie e le metodologie di studio. Sono previste anche esercitazioni pratiche e l’incontro con ex diplomati dell’Accademia già inseriti nel mondo del lavoro.
       La partecipazione agli Stage è libera (è sufficiente prenotare), non comporta alcun impegno per l’iscrizione, e ha uno scopo puramente orientativo e attitudinale; inoltre costituisce elemento di valutazione ulteriore per l’eventuale assegnazione delle Borse di Studio. Al termine della giornata, su richiesta, viene rilasciato un attestato di partecipazione.
       
-      "COMPILA IL FORM PER ACCEDERE AGLI STAGES":/formstages
+      "COMPILA IL FORM PER ACCEDERE AGLI STAGES":/pages/form
       
       
       h4. Data inizio prossimo stage:
@@ -244,7 +244,7 @@
       
       
       Subscribe to our NEWSLETTER
-      HOW TO GET THERE
+      "HOW TO GET THERE":http://maps.google.it/maps?client=safari&oe=UTF-8&ie=UTF8&q=accademia+cappiello+firenze&fb=1&gl=it&hq=accademia+cappiello&hnear=Florence&cid=0,0,3992697713780633557&t=h&z=16&iwloc=A
       
       
       <div id="likebox">
@@ -258,7 +258,7 @@
       
       
       Iscriviti alla NEWSLETTER
-      COME RAGGIUNGERCI
+      "COME RAGGIUNGERCI":http://maps.google.it/maps?client=safari&oe=UTF-8&ie=UTF8&q=accademia+cappiello+firenze&fb=1&gl=it&hq=accademia+cappiello&hnear=Florence&cid=0,0,3992697713780633557&t=h&z=16&iwloc=A
       
       
       <div id="likebox">
@@ -429,8 +429,11 @@
       The Visual Design course is aimed at those aspiring to become professionals in the fields of graphics, illustration, graphics, editorial, the Advertising and Web Design, fields that have changed considerably and require more young talent. 
       In two consecutive semesters are the basis for a career related to visual design, studying the different techniques for creating, processing and layout, with subjects ranging from design, to computer graphics to photography. The course includes a lot of practice and exercises: students participate in competitions and national and international awards.
       The main graphics software and web are taught with the help of projections and tutorials dedicated classroom equipped with the latest Apple Mac computers.
+      
+      <Form[:pdf_visual_design_annual]>
   text_it: |-
       <div id='aside'>
+      
       * - data di inizio: 21 Febbraio 2011
       * - durata: 800 ore
       * - frequenza: giornaliera
@@ -438,9 +441,12 @@
       * - costo del corso: per ogni semestre: iscrizione 1500 euro, 2 rate di frequenza da 950 euro
       * - attestato: Sì
       * - prerequisiti: non occorrono prerequisiti particolari
+      
       </div>  
       
       Il corso di Visual Design è rivolto a coloro che aspirano a diventare professionisti nei settori della Grafica, dell’Illustrazione, della Grafica Editoriale, di quella Pubblicitaria e del Web Design, campi che hanno subìto una forte evoluzione e richiedono sempre giovani talenti. In due semestri consecutivi vengono poste le basi per intraprendere una professione legata alla progettazione visiva, approfondendo le diverse tecniche di creazione, elaborazione e impaginazione, con materie che spaziano dal disegno, alla computer grafica fino alla fotografia. Il corso comprende molta pratica ed esercitazioni: gli alunni partecipano a concorsi e premi nazionali e internazionali. I principali software di grafica e di web sono insegnati con l’ausilio di proiezioni e tutorial in un’aula dedicata, attrezzata con computer Apple Mac di ultima generazione.
+      
+      <Form[:pdf_visual_design_annual]>
   title_en: "Visual Design - Annual Training"
   title_it: "Visual Design - Corsi Annuali"
   title_url_en: visual_design_annual_training
@@ -466,6 +472,8 @@
       </div>
       
       The Visual Design short course aims to introduce the basics of visual communication through the implementation of a proposed design: Students will be invited, under the guidance of teachers, to address and resolve all issues related to different phases of work simulated. This type of formula immersion is aimed primarily at those who are engaged full-time study or into employment (students, graduates and young professionals), or any other person involved in the field that have a limited availability of time. To allow a more direct teaching and more personalized care, the number of participants is limited to ten students. This course is also a first level of contact with the profession and is preparatory to the annual course.
+      
+      <Form[:pdf_visual_design_short]>
   text_it: |-
       <div id='aside'>
       * - data di inizio: 17 o 21 Gennaio 2011
@@ -475,9 +483,12 @@
       * - costo del corso: 500 Euro
       * - attestato: Sì
       * - prerequisiti: Non occorrono prerequisiti particolari
+      
       </div>
       
       Il corso breve di Visual Design ha lo scopo di introdurre le basi della comunicazione visiva attraverso la realizzazione di un progetto di grafica: gli studenti saranno invitati, sotto la guida dei docenti, ad affrontare e risolvere tutte le problematiche legate alle diverse fasi di un lavoro simulato. Questo tipo di formula full-immersion si rivolge principalmente a coloro che sono impegnati a tempo pieno nello studio o nell’attività lavorativa (studenti, neolaureati o giovani professionisti), o comunque a persone interessate al settore che hanno una disponibilità di tempo limitata. Per consentire una didattica più diretta e un’assistenza più personalizzata, il numero dei partecipanti è limitato a dieci studenti. Questo corso rappresenta anche una prima occasione di contatto con la professione ed è propedeutico al corso annuale.
+      
+      <Form[:pdf_visual_design_short]>
   title_en: "Visual Design - Short Courses"
   title_it: "Visual Design - Corsi Brevi"
   title_url_en: visual_design_short_courses
@@ -511,6 +522,8 @@
       The course in Interior Design is a viable alternative to university education for those wishing to become interior designer. 
       The Interior Designer is a professional who uses his own sensibility and its expertise to interpret the taste of people and provide housing solutions that combine aesthetics and functionality. 
       A good designer is able to divide rooms, advising materials and finishes depending on the intended use, suggest furniture and decor for private rooms, offices, public places. < br> The course is divided into two consecutive semesters in which students learn the theory and practice for the profession. The main software design are taught in dedicated computer room with guided lessons with the help of the projector.
+      
+      <Form[:pdf_interior_design_annual]>
   text_it: |-
       <div id='aside'>
       * - data di inizio: 21 Febbraio 2011
@@ -525,6 +538,8 @@
       L’Interior Designer è un professionista che utilizza la propria sensibilità e la propria competenza per interpretare il gusto delle persone e fornire soluzioni abitative che coniugano estetica e funzionalità.
       Un buon progettista è in grado di suddividere gli spazi, consigliare materiali e finiture in funzione delle destinazioni d’uso, suggerire mobili e complementi per l’arredamento di ambienti privati, uffici, locali pubblici.
       Il corso si articola in due semestri consecutivi in cui gli allievi apprendono le basi teoriche e pratiche per la professione. I principali software di progettazione sono insegnati in un’aula computer dedicata con lezioni guidate con l’ausilio del videoproiettore.
+      
+      <Form[:pdf_interior_design_annual]>
   title_en: "Interior Design - Annual Training"
   title_it: "Interior Design - Corsi Annuali"
   title_url_en: interior_design_annual_training
@@ -550,6 +565,8 @@
       </div>
       
       The short course in Interior Design is aimed particularly at people already working full time study or into employment (students, graduates or young professionals), or any other person involved in the field and with limited time availability. The short course is designed to provide an overview of immersion in the profession of interior designer, in order to focus, through a project, the highlights of the activity and provide a starting point, an opportunity specialization or upgrade. To allow a more direct teaching and more personalized care, the number of participants is limited to ten students. This course is also a first level of contact with the profession and is preparatory to the annual course.
+      
+      <Form[:pdf_interior_design_short]>
   text_it: |-
       <div id='aside'>
       * - data di inizio: 17 o 21 gennaio 2011
@@ -562,6 +579,8 @@
       </div>
       Il corso breve di Interior Design si rivolge in particolar modo a persone già impegnate a tempo pieno nello studio o nell’attività lavorativa (studenti, neolaureati o giovani professionisti), o comunque a persone interessate al settore e con limitate disponibilità di tempo. Il corso breve è concepito per offrire una panoramica full-immersion nella professione del progettista di interni, con lo scopo di mettere a fuoco, attraverso la realizzazione di un progetto, i punti salienti dell’attività e offrire un punto di partenza, un’occasione di specializza zione oppure di aggiornamento. 
       Per consentire una didattica più diretta e un’assistenza più personalizzata, il numero dei partecipanti è limitato a dieci studenti. Questo corso rappresenta anche una prima occasione di contatto con la professione ed è propedeutico al corso annuale.
+      
+      <Form[:pdf_interior_design_short]>
   title_en: "Interior Design - Short Courses"
   title_it: "Interior Design - Corsi Brevi"
   title_url_en: interior_design_short_courses
