--- a/db/pages.yml
+++ b/db/pages.yml
@@ -248,7 +248,7 @@
       
       
       <div id="likebox">
-      <script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script><fb:like-box href="http://www.facebook.com/pages/Accademia-dArte-e-Design-Leonetto-Cappiello-Firenze/124282164308467" width="292" show_faces="true" stream="true" header="false"></fb:like-box></div>
+      <script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script><fb:like-box href="http://www.facebook.com/pages/Accademia-dArte-e-Design-Leonetto-Cappiello-Firenze/124282164308467" width="292" show_faces="false" stream="true" header="false"></fb:like-box></div>
   text_it: |-
       h3. Accademia d’Arte e Design Leonetto Cappiello
       via della Fornace 33, 50125 FIRENZE
@@ -262,7 +262,7 @@
       
       
       <div id="likebox">
-      <script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script><fb:like-box href="http://www.facebook.com/pages/Accademia-dArte-e-Design-Leonetto-Cappiello-Firenze/124282164308467" width="292" show_faces="true" stream="true" header="false"></fb:like-box></div>
+      <script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script><fb:like-box href="http://www.facebook.com/pages/Accademia-dArte-e-Design-Leonetto-Cappiello-Firenze/124282164308467" width="292" show_faces="false" stream="true" header="false"></fb:like-box></div>
   title_en: Contacts
   title_it: Contatti
   title_url_en: contacts
