--- a/db/pages2.yml
+++ b/db/pages2.yml
@@ -244,7 +244,7 @@
       
       
       Subscribe to our NEWSLETTER
-      "HOW TO GET THERE":http://maps.google.it/maps?client=safari&oe=UTF-8&ie=UTF8&q=accademia+cappiello+firenze&fb=1&gl=it&hq=accademia+cappiello&hnear=Florence&cid=0,0,3992697713780633557&t=h&z=16&iwloc=A
+      "HOW TO GET THERE":http://maps.google.it/maps?client=safari&oe=UTF-8&ie=UTF8&q=accademia+cappiello+firenze&fb=1&gl=it&hq=accademia+cappiello&hnear=Florence&t=h&z=16&iwloc=A
       
       
       <div id="likebox">
@@ -258,7 +258,7 @@
       
       
       Iscriviti alla NEWSLETTER
-      "COME RAGGIUNGERCI":http://maps.google.it/maps?client=safari&oe=UTF-8&ie=UTF8&q=accademia+cappiello+firenze&fb=1&gl=it&hq=accademia+cappiello&hnear=Florence&cid=0,0,3992697713780633557&t=h&z=16&iwloc=A
+      "COME RAGGIUNGERCI":http://maps.google.it/maps?client=safari&oe=UTF-8&ie=UTF8&q=accademia+cappiello+firenze&fb=1&gl=it&hq=accademia+cappiello&hnear=Florence&t=h&z=16&iwloc=A
       
       
       <div id="likebox">
